private channel avatar repositioning

--- a/src/source.css
+++ b/src/source.css
@@ -69,3 +69,6 @@
     margin-left: 0;
     max-width: 233px;
 }
+#private-channels > div > .channel-2QD9_O > div > .avatar-3uk_u9 {
+    margin-left: 4px;
+}
