--- a/src/source.css
+++ b/src/source.css
@@ -6,7 +6,7 @@
     --selected-bg-hover: rgba(112, 135, 215, 0.18);
     --hovered-bg: rgba(79, 84, 92, 0.25);
     --bg-rounding: 0 50px 50px 0;
-    --border-info: 2px solid;
+    --badge-info: 2px;
 }
 
 /* Removes Original Indicators */
@@ -15,50 +15,31 @@
     background: none !important;
 }
 
-/* Badges */
-.modeSelected-1zApJ_::before,
-.modeUnread-1zpFdA::before {
-    content: "";
-    position: absolute;
-    height: 34px;
-}
-.channel-2QD9_O.selected-aXhQR6::before {
-    content: "";
-    position: absolute;
-    height: 44px;
-    top: 0;
-}
-
 /* Selected Channel */
 .modeSelected-1zApJ_,
 .channel-2QD9_O.selected-aXhQR6 {
     background: var(--selected-bg);
+    box-shadow: inset var(--badge-info) 0 var(--selected-badge);
     border-radius: var(--bg-rounding);
 }
 .modeSelected-1zApJ_:hover,
 .channel-2QD9_O.selected-aXhQR6:hover {
     background: var(--selected-bg-hover);
 }
-.modeSelected-1zApJ_::before,
-.channel-2QD9_O.selected-aXhQR6::before {
-    border-left: var(--border-info) var(--selected-badge);
-}
 
 /* Unread Channels */
 .modeUnread-1zpFdA {
     background: var(--unread-bg);
     border-radius: var(--bg-rounding);
-}
-.modeUnread-1zpFdA::before {
-    border-left: var(--border-info) var(--unread-badge);
+    box-shadow: inset var(--badge-info) 0 var(--unread-badge);
 }
 .unread-3zKkbm {
     display: none;
 }
 
 /* Hovering on channels */
-.wrapper-1ucjTd:hover:not(.modeSelected-1zApJ_),
 .modeUnread-1zpFdA:hover,
+.wrapper-1ucjTd:hover:not(.modeSelected-1zApJ_),
 .channel-2QD9_O.container-2Pjhx-:hover:not(.selected-aXhQR6) {
     background: var(--hovered-bg);
     border-radius: var(--bg-rounding);
