--- a/src/source.css
+++ b/src/source.css
@@ -6,7 +6,7 @@
     --selected-bg-hover: rgba(112, 135, 215, 0.18);
     --hovered-bg: rgba(79, 84, 92, 0.25);
     --bg-rounding: 0 50px 50px 0;
-    --badge-info: 2px;
+    --border-info: 2px solid;
 }
 
 /* Removes Original Indicators */
@@ -15,23 +15,42 @@
     background: none !important;
 }
 
+/* Badges */
+.modeSelected-346R90::before,
+.modeUnread-1qO3K1::before {
+    content: "";
+    position: absolute;
+    height: 34px;
+}
+.channel-2QD9_O.selected-aXhQR6::before {
+    content: "";
+    position: absolute;
+    height: 44px;
+    top: 0;
+}
+
 /* Selected Channel */
 .modeSelected-346R90,
 .channel-2QD9_O.selected-aXhQR6 {
     background: var(--selected-bg);
-    box-shadow: inset var(--badge-info) 0 var(--selected-badge);
     border-radius: var(--bg-rounding);
 }
 .modeSelected-346R90:hover,
 .channel-2QD9_O.selected-aXhQR6:hover {
     background: var(--selected-bg-hover);
 }
+.modeSelected-346R90::before,
+.channel-2QD9_O.selected-aXhQR6::before {
+    border-left: var(--border-info) var(--selected-badge);
+}
 
 /* Unread Channels */
 .modeUnread-1qO3K1 {
     background: var(--unread-bg);
     border-radius: var(--bg-rounding);
-    box-shadow: inset var(--badge-info) 0 var(--unread-badge);
+}
+.modeUnread-1qO3K1::before {
+    border-left: var(--border-info) var(--unread-badge);
 }
 .unread-2lAfLh {
     display: none;
@@ -39,7 +58,7 @@
 
 /* Hovering on channels */
 .modeUnread-1qO3K1:hover,
-.wrapper-1ucjTd:hover:not(.modeSelected-346R90),
+.wrapper-2jXpOf:hover:not(.modeSelected-346R90),
 .channel-2QD9_O.container-2Pjhx-:hover:not(.selected-aXhQR6) {
     background: var(--hovered-bg);
     border-radius: var(--bg-rounding);
