--- a/indicators.css
+++ b/indicators.css
@@ -8,5 +8,5 @@
     --selected-bg-hover: rgba(112, 135, 215, 0.18);
     --hovered-bg: rgba(79, 84, 92, 0.25);
     --bg-rounding: 0 50px 50px 0;
-    --badge-info: 2px;
+    --border-info: 2px solid;
 }
