--- a/src/source.css
+++ b/src/source.css
@@ -21,6 +21,7 @@
     content: "";
     position: absolute;
     height: 34px;
+    top: 0;
 }
 .channel-2QD9_O.selected-aXhQR6::before {
     content: "";
