update some outdated things

--- a/src/support/ModernChannelIndiactors.user.css
+++ b/src/support/ModernChannelIndiactors.user.css
@@ -1,9 +1,9 @@
 @-moz-document domain("discord.com") {
     /* ==UserStyle==
-    @name         Better Channel Indicators
+    @name         Modern Channel Indicators
     @description  Adds a nice touch to Discord's current channel indicators.
     @author       LuckFire#400
-    @namespace    github.com/LuckFire/BetterChannelIndicators
+    @namespace    https://github.com/Discord-Theme-Addons/modern-channel-indicators
     @version      1.3.0
     ==/UserStyle== */
 
