--- a/src/support/ModernChannelIndiactors.theme.css
+++ b/src/support/ModernChannelIndiactors.theme.css
@@ -1,11 +1,11 @@
 /**
-    * @name Better Channel Indicators
+    * @name Modern Channel Indicators
     * @version 1.3.0
     * @description Adds a nice touch to Discord's current channel indicators.
     * @author LuckFire#4800
     *
     * @website https://github.com/LuckFire
-    * @source https://github.com/LuckFire/BetterChannelIndicators/tree/main/src
+    * @source https://github.com/Discord-Theme-Addons/modern-channel-indicators/tree/main/src
 **/
 
 :root {
