--- a/src/_indicators.scss
+++ b/src/_indicators.scss
@@ -1,9 +1,15 @@
+:root {
+    --fallback-selected: 88, 101, 242;
+    --fallback-unread: 255, 255, 255;
+    --fallback-connected: 87, 242, 135;
+}
+
 #app-mount {
     /* -------- BASE ---- */ 
     /* ---- Borders -- */
     .containerDefault--pIXnN .wrapper-2jXpOf,
     .channel-2QD9_O {
-        border-radius: var(--indicator-rounding);
+        border-radius: var(--indicator-rounding, 0);
 
         &::before {
             content: "";
@@ -24,71 +30,84 @@
     .containerDefault--pIXnN .wrapper-2jXpOf:not(.modeSelected-346R90):not(.modeConnected-3IsKId),
     .channel-2QD9_O:not(.selected-aXhQR6) {
         &:hover {
-            background: var(--indicator-hovered);
+            background: var(--indicator-hovered, rgba(79, 84, 92, 0.25));
+
+            .overflow-WK9Ogt {
+                color: var(--indicator-hovered-text, var(--interactive-hover));
+            }
         }
     }
 
     /* ---- Channel Selected -- */
     .modeSelected-346R90,
     .channel-2QD9_O.selected-aXhQR6 {
-        background-color: var(--indicator-selected-background);
+        background-color: var(--indicator-selected-background, rgba(var(--indicator-selected, var(--fallback-selected)), 0.1));
 
         &:hover {
-            background-color: var(--indicator-selected-hover);
+            background-color: var(--indicator-selected-hover, rgba(var(--indicator-selected, var(--fallback-selected)), 0.18));
         }
         &::before {
-            border-left: var(--indicator-border-info) var(--indicator-selected-border);
+            border-left: var(--indicator-border-info, 2px solid) var(--indicator-selected-border, rgba(var(--indicator-selected, var(--fallback-selected))));
+        }
+        .overflow-WK9Ogt {
+            color: var(--indicator-selected-text, white);
         }
         div > svg {
-            color: var(--indicator-selected-border);
+            color: var(--indicator-selected-icons, rgba(var(--indicator-selected, var(--fallback-selected))));
         }
     }
 
     /* ---- Channel Unread -- */
     .modeUnread-1qO3K1 {
-        background: var(--indicator-unread-background);
+        background-color: var(--indicator-unread-background, rgba(var(--indicator-unread, var(--fallback-unread)), 0.01));
 
         &::before {
-            border-left: var(--indicator-border-info) var(--indicator-unread-border);
+            border-left: var(--indicator-border-info, 2px solid) var(--indicator-unread-border, rgba(var(--indicator-unread, var(--fallback-unread)), 0.6));
         }
         .unread-2lAfLh {
             display: none;
         }
-
+        .overflow-WK9Ogt {
+            color: var(--indicator-unread-text, white);
+        }
         .icon-1DeIlz, .actionIcon-PgcMM2 {
-            color: var(--indicator-unread-border);
+            color: var(--indicator-unread-icons, rgba(var(--indicator-unread, var(--fallback-unread)), 0.6));
         }
     }
 
 
     /* ---- VC Connected -- */
     .modeConnected-3IsKId {
-        background-color: var(--indicator-connected-background);
+        background-color: var(--indicator-connected-background, rgba(var(--indicator-connected, var(--fallback-connected)), 0.1));
 
         &:hover {
-            background-color: var(--indicator-connected-hover);
+            background-color: var(--indicator-connected-hover, rgba(var(--indicator-connected, var(--fallback-connected)), 0.18));
         }
         &::before {
-            border-left: var(--indicator-border-info) var(--indicator-connected-border);
+            border-left: var(--indicator-border-info, 2px solid) var(--indicator-connected-border, rgba(var(--indicator-connected, var(--fallback-connected))));
+        }
+        .overflow-WK9Ogt {
+            color: var(--indicator-connected-text, white);
         }
 
         // user limit
         .userLimit-3aerPX .wrapper-2tAnRe {
             color: white;
+            background-color: rgba(var(--indicator-connected, var(--fallback-connected)), 0.3);
 
             .users-3kndPl {
-                background-color: rgba(var(--indicator-connected), 0.3);
+                background-color: transparent;
             }
             .total-i6us2n {
-                background-color: rgba(var(--indicator-connected), 0.6);
+                background-color: rgba(var(--indicator-connected, var(--fallback-connected)), 0.4);
                 &::after {
-                    border-right-color: rgba(var(--indicator-connected), 0.45);
+                    border-right-color: rgba(var(--indicator-connected, var(--fallback-connected)), 0.4);
                 }
             }
         }
 
         .icon-1DeIlz, .actionIcon-PgcMM2 {
-            color: var(--indicator-connected-border);
+            color: var(--indicator-connected-icons, rgba(var(--indicator-connected, var(--fallback-connected))));
         }
     }
 
@@ -97,7 +116,7 @@
         margin-left: 0;
         max-width: 100%;
 
-        div .avatar-3uk_u9 {
+        .avatar-3uk_u9 {
             margin-left: 8px;
         }
     }
