--- a/src/support/ModernChannelIndicators.theme.css
+++ b/src/support/ModernChannelIndicators.theme.css
@@ -1,6 +1,6 @@
 /**
     * @name Modern Channel Indicators
-    * @version 1.2.2
+    * @version 1.3.0
     * @description Adds a nice touch to Discord's current channel indicators.
     * @author LuckFire#4800
     *
@@ -12,24 +12,31 @@
 
 :root {
     /* ---- base -- */
-    --indicator-hovered: rgba(79, 84, 92, 0.25);
-    --indicator-rounding: 0;
+    --indicator-rounding: 0 0px 0px 0; /* change center values to only round the right */
     --indicator-border-info: 2px solid;
+    --indicator-hovered: rgba(79, 84, 92, 0.25);
+    --indicator-hovered-text: var(--interactive-hover);
 
     /* ---- selected -- */
     --indicator-selected: 88, 101, 242;
     --indicator-selected-border: rgba(var(--indicator-selected));
     --indicator-selected-background: rgba(var(--indicator-selected), 0.1);
     --indicator-selected-hover: rgba(var(--indicator-selected), 0.18);
+    --indicator-selected-icons: rgba(var(--indicator-selected));
+    --indicator-selected-text: white;
 
     /* ---- unreads  -- */
     --indicator-unread: 255, 255, 255;
     --indicator-unread-border: rgba(var(--indicator-unread), 0.6);
     --indicator-unread-background: rgba(var(--indicator-unread), 0.01);
+    --indicator-unread-icons: var(--indicator-unread-border);
+    --indicator-unread-text: white;
     
     /* ---- connected -- */
     --indicator-connected: 87, 242, 135;
     --indicator-connected-border: rgba(var(--indicator-connected));
     --indicator-connected-background: rgba(var(--indicator-connected), 0.1);
     --indicator-connected-hover: rgba(var(--indicator-connected), 0.18);
+    --indicator-connected-icons: var(--indicator-connected-border);
+    --indicator-connected-text: white;
 }
