--- a/src/_indicators.scss
+++ b/src/_indicators.scss
@@ -1,14 +1,52 @@
 :root {
-    --fallback-selected: 88, 101, 242;
-    --fallback-unread: 255, 255, 255;
-    --fallback-connected: 87, 242, 135;
+    /* ---- base -- */
+    --indicator-rounding: 0 0px 0px 0; /* change center values to only round the right */
+    --indicator-border-info: 2px solid;
+    --indicator-hovered: rgba(79, 84, 92, 0.25);
+    --indicator-hovered-text: var(--interactive-hover);
+
+    /* ---- selected -- */
+    --indicator-selected: 88, 255, 242;
+    --indicator-selected-border: rgba(var(--indicator-selected));
+    --indicator-selected-background: rgba(var(--indicator-selected), 0.1);
+    --indicator-selected-hover: rgba(var(--indicator-selected), 0.18);
+    --indicator-selected-icons: rgba(var(--indicator-selected));
+    
+    /* ---- connected -- */
+    --indicator-connected: 87, 242, 135;
+    --indicator-connected-border: rgba(var(--indicator-connected));
+    --indicator-connected-background: rgba(var(--indicator-connected), 0.1);
+    --indicator-connected-hover: rgba(var(--indicator-connected), 0.18);
+    --indicator-connected-icons: var(--indicator-connected-border);
+}
+.theme-dark {
+    /* ---- unreads  -- */
+    --indicator-unread: 255, 255, 255;
+    --indicator-unread-border: rgba(var(--indicator-unread), 0.6);
+    --indicator-unread-background: rgba(var(--indicator-unread), 0.01);
+    --indicator-unread-icons: var(--indicator-unread-border);
+    --indicator-unread-text: white;
+
+    --indicator-selected-text: white;
+    --indicator-connected-text: white;
+}
+.theme-light {
+    /* ---- unreads  -- */
+    --indicator-unread: 0, 0, 0;
+    --indicator-unread-border: rgba(var(--indicator-unread), 0.6);
+    --indicator-unread-background: rgba(var(--indicator-unread), 0.025);
+    --indicator-unread-icons: var(--indicator-unread-border);
+    --indicator-unread-text: black;
+
+    --indicator-selected-text: black;
+    --indicator-connected-text: black;
 }
 
 #app-mount { 
     // Indicator Borders
     .containerDefault--pIXnN .wrapper-2jXpOf,
     .channel-2QD9_O {
-        border-radius: var(--indicator-rounding, 0);
+        border-radius: var(--indicator-rounding);
         &::before {
             content: "";
             position: absolute;
@@ -18,7 +56,7 @@
         }
     }
     .categoryItem-ONe8JV {
-        border-radius: var(--indicator-rounding, 0);
+        border-radius: var(--indicator-rounding);
         &::before {
             content: "";
             position: fixed;
@@ -38,13 +76,13 @@
     [class="channel-2QD9_O container-2Pjhx- clickable-1JJAn8"],
     [class="categoryItem-ONe8JV container-2Pjhx- clickable-1JJAn8"] {
         &:hover {
-            background: var(--indicator-hovered, rgba(79, 84, 92, 0.25));
+            background: var(--indicator-hovered);
         }
     }
     .modeMuted-onO3r-,
     [class="iconVisibility-sTNpHs wrapper-2jXpOf"] {
         &:hover .overflow-WK9Ogt {
-            color: var(--indicator-hovered-text, var(--interactive-hover));
+            color: var(--indicator-hovered-text);
         }
     }
 
@@ -52,67 +90,67 @@
     .modeSelected-346R90,
     .channel-2QD9_O.selected-aXhQR6,
     .selectedCategoryItem-28UllF {
-        background-color: var(--indicator-selected-background, rgba(var(--indicator-selected, var(--fallback-selected)), 0.1));
+        background-color: var(--indicator-selected-background);
         &:hover {
-            background-color: var(--indicator-selected-hover, rgba(var(--indicator-selected, var(--fallback-selected)), 0.18));
+            background-color: var(--indicator-selected-hover);
         }
         &::before {
-            border-left: var(--indicator-border-info, 2px solid) var(--indicator-selected-border, rgba(var(--indicator-selected, var(--fallback-selected))));
+            border-left: var(--indicator-border-info) var(--indicator-selected-border);
         }
         .overflow-WK9Ogt {
-            color: var(--indicator-selected-text, white);
+            color: var(--indicator-selected-text);
         }
         div > svg {
-            color: var(--indicator-selected-icons, rgba(var(--indicator-selected, var(--fallback-selected))));
+            color: var(--indicator-selected-icons);
         }
     }
 
     // Indicator Unread
     .modeUnread-1qO3K1 {
-        background-color: var(--indicator-unread-background, rgba(var(--indicator-unread, var(--fallback-unread)), 0.01));
+        background-color: var(--indicator-unread-background);
         &::before {
-            border-left: var(--indicator-border-info, 2px solid) var(--indicator-unread-border, rgba(var(--indicator-unread, var(--fallback-unread)), 0.6));
+            border-left: var(--indicator-border-info) var(--indicator-unread-border);
         }
         .unread-2lAfLh {
             display: none;
         }
         .overflow-WK9Ogt {
-            color: var(--indicator-unread-text, white);
+            color: var(--indicator-unread-text);
         }
         .icon-1DeIlz, .actionIcon-PgcMM2 {
-            color: var(--indicator-unread-icons, rgba(var(--indicator-unread, var(--fallback-unread)), 0.6));
+            color: var(--indicator-unread-icons);
         }
     }
 
     // VC Connected
     .modeConnected-3IsKId {
-        background-color: var(--indicator-connected-background, rgba(var(--indicator-connected, var(--fallback-connected)), 0.1));
+        background-color: var(--indicator-connected-background);
         &:hover {
-            background-color: var(--indicator-connected-hover, rgba(var(--indicator-connected, var(--fallback-connected)), 0.18));
+            background-color: var(--indicator-connected-hover);
         }
         &::before {
-            border-left: var(--indicator-border-info, 2px solid) var(--indicator-connected-border, rgba(var(--indicator-connected, var(--fallback-connected))));
+            border-left: var(--indicator-border-info) var(--indicator-connected-border);
         }
         .overflow-WK9Ogt {
-            color: var(--indicator-connected-text, white);
+            color: var(--indicator-connected-text);
         }
         // user limit
         .userLimit-3aerPX .wrapper-2tAnRe {
             color: white;
-            background-color: rgba(var(--indicator-connected, var(--fallback-connected)), 0.3);
+            background-color: rgba(var(--indicator-connected), 0.4);
 
             .users-3kndPl {
                 background-color: transparent;
             }
             .total-i6us2n {
-                background-color: rgba(var(--indicator-connected, var(--fallback-connected)), 0.4);
+                background-color: rgba(var(--indicator-connected), 0.4);
                 &::after {
-                    border-right-color: rgba(var(--indicator-connected, var(--fallback-connected)), 0.4);
+                    border-right-color: rgba(var(--indicator-connected), 0.4);
                 }
             }
         }
         .icon-1DeIlz, .actionIcon-PgcMM2 {
-            color: var(--indicator-connected-icons, rgba(var(--indicator-connected, var(--fallback-connected))));
+            color: var(--indicator-connected-icons, rgba(var(--indicator-connected)));
         }
     }
 
@@ -125,4 +163,8 @@
             margin-left: 8px;
         }
     }
+}
+
+.theme-light .modeConnected-3IsKId .userLimit-3aerPX .wrapper-2tAnRe {
+    color: black !important;
 }
