--- a/src/support/ModernChannelIndicators.user.css
+++ b/src/support/ModernChannelIndicators.user.css
@@ -4,52 +4,44 @@
     @description  Adds a nice touch to Discord's current channel indicators.
     @author       LuckFire#400
     @namespace    https://github.com/Discord-Theme-Addons/modern-channel-indicators
-    @version      1.4.1
+    @version      1.5.0
     ==/UserStyle== */
     
     @import url('https://discord-theme-addons.github.io/modern-channel-indicators/src/support/compiled.css');
 
-    :root {
-        /* ---- base -- */
-        --indicator-rounding: 0 0px 0px 0; /* change center values to only round the right */
-        --indicator-border-info: 2px solid;
-        --indicator-hovered: rgba(79, 84, 92, 0.25);
-        --indicator-hovered-text: var(--interactive-hover);
-    
-        /* ---- selected -- */
-        --indicator-selected: 88, 101, 242;
-        --indicator-selected-border: rgba(var(--indicator-selected));
-        --indicator-selected-background: rgba(var(--indicator-selected), 0.1);
-        --indicator-selected-hover: rgba(var(--indicator-selected), 0.18);
-        --indicator-selected-icons: rgba(var(--indicator-selected));
-        
-        /* ---- connected -- */
-        --indicator-connected: 87, 242, 135;
-        --indicator-connected-border: rgba(var(--indicator-connected));
-        --indicator-connected-background: rgba(var(--indicator-connected), 0.1);
-        --indicator-connected-hover: rgba(var(--indicator-connected), 0.18);
-        --indicator-connected-icons: var(--indicator-connected-border);
-    }
+    /* [ THEME MODE SPECIFIC ] */
     .theme-dark {
-        /* ---- unreads  -- */
+        --indicator-selected: 88, 101, 242;
         --indicator-unread: 255, 255, 255;
-        --indicator-unread-border: rgba(var(--indicator-unread), 0.6);
-        --indicator-unread-background: rgba(var(--indicator-unread), 0.01);
-        --indicator-unread-icons: var(--indicator-unread-border);
-        --indicator-unread-text: white;
-    
-        --indicator-selected-text: white;
-        --indicator-connected-text: white;
+        --indicator-connected: 87, 242, 135;
+        --indicator-active: white;
     }
+
     .theme-light {
-        /* ---- unreads  -- */
+        --indicator-selected: 88, 101, 242;
         --indicator-unread: 0, 0, 0;
+        --indicator-connected: 65, 183, 102;
+        --indicator-active: black;
+    }
+
+    /* [ CUSTOMIZATION BASE ] */
+    :root {
+        --indicator-border-info: solid 2px;
+        --indicator-rounding-info: 0 0px 0px 0;
+        --indicator-hovered: rgba(85, 90, 100, 0.25);
+        /* [ SELECTED ] */
+        --indicator-selected-border: rgba(var(--indicator-selected));
+        --indicator-selected-icons: rgba(var(--indicator-selected));
+        --indicator-selected-hover: rgba(var(--indicator-selected), 0.18);
+        --indicator-selected-background: rgba(var(--indicator-selected), 0.1);
+        /* [ UNREAD ] */
         --indicator-unread-border: rgba(var(--indicator-unread), 0.6);
-        --indicator-unread-background: rgba(var(--indicator-unread), 0.025);
         --indicator-unread-icons: var(--indicator-unread-border);
-        --indicator-unread-text: black;
-    
-        --indicator-selected-text: black;
-        --indicator-connected-text: black;
+        --indicator-unread-background: rgba(var(--indicator-unread), 0.020);
+        /* [ CONNECTED ] */
+        --indicator-connected-border: rgba(var(--indicator-connected));
+        --indicator-connected-icons: var(--indicator-connected-border);
+        --indicator-connected-hover: rgba(var(--indicator-connected), 0.18);
+        --indicator-connected-background: rgba(var(--indicator-connected), 0.1);
     }
 }
