--- a/src/support/ModernChannelIndicators.user.css
+++ b/src/support/ModernChannelIndicators.user.css
@@ -1,7 +1,7 @@
 @-moz-document domain("discord.com") {
     /* ==UserStyle==
     @name         Modern Channel Indicators
-    @description  Adds a nice touch to Discord's current channel indicators.
+    @description  Spice up Discord's channel indicators
     @author       LuckFire#400
     @namespace    https://github.com/Discord-Theme-Addons/modern-channel-indicators
     @version      1.5.0
