--- a/src/support/ModernChannelIndicators.theme.css
+++ b/src/support/ModernChannelIndicators.theme.css
@@ -1,7 +1,7 @@
 /**
     * @name Modern Channel Indicators
     * @version 1.5.0
-    * @description Adds a nice touch to Discord's current channel indicators.
+    * @description Spice up Discord's channel indicators
     * @author LuckFire#4800
     *
     * @website https://github.com/Discord-Theme-Addons
