--- a/src/_theme.scss
+++ b/src/_theme.scss
@@ -48,7 +48,7 @@
         &::before {
             border-left: var(--indicator-border-info) var(--indicator-selected-border);
         }
-        .overflow-WK9Ogt {
+        .overflow-1wOqNV {
             color: var(--indicator-active);
         }
         div > svg {
@@ -68,7 +68,7 @@
             color: var(--indicator-active);
         }
         .icon-2W8DHg, .actionIcon-2sw4Sl {
-            color: var(--indicator-unread-icons) !important;
+            color: var(--indicator-unread-icons);
         }
         .unread-36eUEm {
             display: none;
